# agnoclassifier

./: .gitignore  README.md  main.py  pyproject.toml
src/agno_classifier/: __init__.py  legal_classifier.py  main.py
src/agno_classifier/tmp/: memory2.db  memory3.db
tmp/: memory3.db
