[project]
name = "agno-classifier"
version = "0.1.0"
description = "agno classifier"
readme = "README.md"
authors = [
    { name = "Faruk Cetınkaya", email = "ahmetfarukcetinkaya290@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "agno>=1.5.6",
    "langchain-community>=0.3.24",
    "pydantic>=2.11.5",
    "python-dotenv>=1.1.0",
]
